8359145: Implement Primitive Types in Patterns, instanceof, and switch (Fourth Preview)